--- a/style.css
+++ b/style.css
@@ -1,155 +1,192 @@
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
+	display: "-webkit-flex";
+	display: "-moz-flex";
+	display: "-ms-flexbox";
+	display: "-ms-flex";
+	display: "flex";
 }
 
 body {
-	background-image: url("images/bgimg2.png");
+	background-image: url("images/bgimgtile2.jpg");
 	background-repeat: repeat;
-	background-attachment: scroll;
 }
 
 h1 {
 	text-align: center;
 	font-family: verdana;
-	font-size: 40px;
-	color: #002255;
+	font-size: 46px;
+	color: #dddddd;
 }
 
 h2 {
-	font-size: 25px;
 	text-align: center;
 	font-family: verdana;
-	color: #004477;
-}
-
-p {
-
+	font-size: 25px;
+	color: #dddddd;
 }
 
 a {
-	
+	color: #dddddd;
 }
-
-ul{
-	
-}
-
-ol {
-	
-}
-
-dl {
-
-}
-
+   
 dt {
 	font-weight: bold;
 }
 
 dd {
-	padding-top: 5px;
-	padding-bottom: 10px;
+	padding-right: 10px;
 }
 
+ul {
+	padding-right: 25px;
+ }
+
+ ol {
+ 	margin-right: 25px;
+ }
+
+#header {
+	width: 90%;
+	min-width: 480px;
+	border: 10px dotted #555555;
+	padding: 20px;
+	overflow: hidden;
+	border-radius: 100px;
+}
+
+#header img {
+	margin-top: 20px;
+	float: left;
+}
+
+#header p {
+	text-align: center;
+	font-family: verdana;
+	color: #dddddd;
+	font-size: 20px;
+	font-variant: italic;
+}
 
 #toc {
-	color: #FFFFFF;
-	background-color: #228855;
+	width: 50%;
+	min-width: 480px;
+	color: #dddddd;
+	background-color: #555555;
 	border-radius: 10px;
 	padding-bottom: 5px;
+	box-shadow: 5px 5px 5px #000000;
+	border: 1px solid #000000;
+	margin-top: 10px;
 }
 
 #toc-title {
-	color: #FFFFFF;
+	color: #dddddd;
 	font-family: arial;
-	font-size: 25px;
 	font-weight: bold;
+	font-size: 25px;
 	text-align: left;
 	padding-left: 10px;
+	margin-top: 5px;
 }
 
 #toc-list {
-	color: #FFFFFF;
-	font-size: ;
+	color: #dddddd;
 	font-family: arial;
 	font-weight: bold;
 }
 
-#lesson-1 {
-	padding-top: 10px;
-}
-
-#btt {
-	font-family: verdana;
-	color: #004477;
-	font-weight: ;
+#footer {
+	font-family: gadugi;
+	font-weight: bold;
 	font-size: 18px;
 	text-align: center;
+	overflow: hidden;
+	color: #cccccc;
 }
 
-.lesson {
-	
+#footer span {
+	float: right;
+	margin-top: 30px;
+	margin-left: -90px;
 }
 
-.lesson-number {
-
+#footer a {
+	color: #cccccc;
+	text-decoration: none;
 }
 
-.concept {
-	border-radius: 10px;
-	padding:;
-	border: 10px;
-	margin: 20px;
-	background-color: #006699;
+.all-lessons {
 	display: flex;
-	box-shadow: 5px 5px 5px #000000;
-	width: 95%;
-	min-width: 500;
+	flex-direction: column;
 }
+
+.lesson-row {
+	display: flex;
+	flex-direction: row;
+}
+
+.lesson-container {
+	display: flex;
+	flex-direction: column;
+	width: 33%;
+	min-width: 190px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.lesson-title {
+	width: 95%;
+	padding-top: 0px;
+}
+
+.concept-container {
+	width: 100%;
+	border-radius: 10px;
+	border: 1px solid #000000;
+	margin-bottom: 20px;
+	background-color: #555555;
+	box-shadow: 5px 5px 5px #000000;
+}	
 
 .concept-title {
-	font-family: arial;
+	font-family: gadugi;
 	font-weight: bold;
+	font-size: 18px;
 	color: #eeeeee;
-	margin: ;
-	padding: 5px;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
 }
 
 .concept-explanation {
 	vertical-align: center;
 	font-family: gadugi;
-	font-size: ;
-	color: #eeeeee;
-	background-color: #339966;
-	margin: 10px;
 	font-size: 18px;
-	box-shadow: inset 0 0 5px #000000;
-	width: 80%;
-	min-width: 375px;
-	padding: ;
-	padding-left: 20px;
-	padding-right: 20px;
+	color: #eeeeee;
+	width: 100%;
+	height: 100%;
+	padding: 10px;
 }
 
-.ordered-list-item {
-
-}
-
-.unordered-list-item {
-	
+.concept-explanation p {
+	width: 90%;
+	padding-left: 10px;
 }
 
 .code-sample {
-	background-color: #eeeeee;
-	color: black;
+	background-color: #dddddd;
+	color: #000000;
 	box-shadow: inset 0 0 5px #000000;
-	width: 50%;
+	width: 90%;
+	min-width: ;
 	max-width: 300px;
 	text-align: left;
+}
+
+.code-sample p  {
 	padding-left: 10px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 
 .codsam-lang {
