--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-* {
-	display: "-webkit-flex";
-	display: "-moz-flex";
-	display: "-ms-flexbox";
-	display: "-ms-flex";
-	display: "flex";
+* [display="flex"] {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flexbox;
+	display: -ms-flex;
 }
 
 body {
@@ -64,7 +63,6 @@ ul {
 	font-family: verdana;
 	color: #dddddd;
 	font-size: 20px;
-	font-variant: italic;
 }
 
 #toc {
@@ -178,7 +176,6 @@ ul {
 	color: #000000;
 	box-shadow: inset 0 0 5px #000000;
 	width: 90%;
-	min-width: ;
 	max-width: 300px;
 	text-align: left;
 }
